Tried fixing title screen (was too high up)

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
 
 	background-image: url("img/titlescreen.png");
     background-size: cover;
-    background-position: center center;
+    
 	font-family: monospace;
 
 }
